--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "vue": "^3.5.13",
+    "vue-i18n": "^12.0.0-alpha.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
